--- a/HTML/Form.html
+++ b/HTML/Form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Registration Form">
-    <meta name="author" content="">
+    <meta name="author" content="fORM">
     <title>Registration Form</title>
     <link href="auth.css" rel="stylesheet"/>
 </head>
